[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Objects/Bumper.gd" type="Script" id=1]
[ext_resource path="res://assets/bumper.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/big_jump.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/circle_particle_white.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 39.0878 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44, 10 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.570784, 0.530508, 0.977051, 1, 0.834403, 0.576149, 0.996582, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 113.21
orbit_velocity = 0.1
orbit_velocity_random = 0.0
scale = 15.0
scale_random = 0.5
color_ramp = SubResource( 4 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.528571, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.301961, 0.65098, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 9.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
color_ramp = SubResource( 7 )

[node name="Bumper" type="KinematicBody2D" groups=[
"bumpers",
]]
show_behind_parent = true
position = Vector2( 0, 9 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Bumper" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -47.876 )
shape = SubResource( 1 )

[node name="BumperStompDetector" type="Area2D" parent="."]
visible = false
modulate = Color( 0.0352941, 0.262745, 0.952941, 1 )
position = Vector2( 0, -70 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BumperStompDetector"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="ShootingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="RestingParticles" type="Particles2D" parent="."]
position = Vector2( 0, -55.9055 )
scale = Vector2( 0.25, 0.25 )
amount = 50
lifetime = 3.0
draw_order = 1
process_material = SubResource( 5 )

[node name="ShootingParticles" type="Particles2D" parent="."]
position = Vector2( 0, -87 )
scale = Vector2( 0.4, 0.4 )
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
preprocess = 0.5
explosiveness = 0.5
process_material = SubResource( 8 )
texture = ExtResource( 4 )
[connection signal="body_entered" from="BumperStompDetector" to="." method="_on_BumperStompDetector_body_entered"]
